Changelog
=========

1.0b3 (unreleased)
------------------

- Nothing changed yet.


1.0b2 (2010-08-18)
------------------

    - Added option 'strict' that will make transmogrify.filesystem break
      if it finds a row of data in Metadata CSV which field-count does not match
      field-count of the first row in the CSV file.
      [zupo]

    - Added option 'delimiter' so you can choose a character that delimits
      your Metadata CSV file.
      [zupo]
    
    - Fixed test_empty_directory by ignoring .svn and similar directories.
      [zupo]

    - Reverted toutpt's change since resolvePackageReferenceOrFile is now 
      available in a released version of transmogrifier.
      [zupo]

    - update api resolvePackageReferenceOrFile -> resolvePackageReference
      [toutpt]

1.0b1 (2009-12-30)
------------------

    - Initial release
      [optilude]
