@@ -1,0 +1,2 @@
+path,portal_type,title,description
+/file1.txt,News Item,File 1,File 1 description
