@@ -4,7 +4,8 @@ Changelog
 1.0b3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+    - Added option to specify items portal_type inside metadata.csv.
+      [zupo]
 
 
 1.0b2 (2010-08-18)
